# qwr

qwr/: AUTHORS  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure.ac  getffmpeg.sh
qwr/GUI/: GUIfiles.src  Makefile  Makefile.in  qtwebrec.h  qtwebrec.ui  qtwebrecMain.cpp  videowidget.cpp  videowidget.h  webrec.cpp  webrec.h
qwr/backend/: VideoFrame.h  VideoFrame.org.h  abstractVideoLayer.cpp  abstractVideoLayer.h  audioDevice.h  audioDeviceMessage.h  avCodecHandler.cpp  avCodecHandler.h  avFileHandler.h  avHandler.cpp  avHandler.h  avStreamHandler.h  codecInfo.h  codecInterface.cpp  codecInterface.h  codecMessage.h  convert.cpp  convert.h  frameSlice.h  jackAudioDevice.cpp  jackAudioDevice.h  oggHeader.h  pixmapFormat.cpp  pixmapFormat.h  ringbuffer.cpp  ringbuffer.h  theoraCodec.cpp  theoraCodec.h  v4l2Capture.cpp  v4l2Capture.h  v4lCapture.cpp  v4lCapture.h  videoCapture.cpp  videoCapture.h  videoDisplayMsg.cpp  videoDisplayMsg.h  videoFrame.h  videoLayer.cpp  videoLayer.h  webrecBackend.cpp  (+2 more)
qwr/esystem/: Makefile  connection.cpp  connection.h  definitions.h  descConnection.cpp  descConnection.h  event.cpp  event.h  itask.cpp  itask.h  message.h  prioQueue.h  qDescConnection.cpp  qDescConnection.h  qTask.cpp  qTask.h  qThreadConnection.cpp  qThreadConnection.h  scheduler.cpp  scheduler.h  simpleConnection.cpp  simpleConnection.h  task.cpp  task.h  threadConnection.cpp  threadConnection.h  timev.cpp  timev.h
